--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap'); */
 /* @import url('https://fonts.googleapis.com/css?family=Tangerine'); */
+/* @import url('https://fonts.googleapis.com/css?family=Baskervville'); */
+/* @import url('https://fonts.googleapis.com/css?family=BioRhyme Expanded'); */
+@import url('https://fonts.googleapis.com/css?family=Reggae One');
 
 * {
   margin: 0;
@@ -13,10 +16,10 @@ html {
 }
 
 body {
-  font-family: 'Press Start 2P', sans-serif;
+  font-family: 'Reggae One';
   color: #eee;
   /* background-image: url('https://thumbs.gfycat.com/BlackValidFieldmouse-size_restricted.gif'); */
-  background-color: #222222;
+  background-color: #75a2aa96;
   /* background-image: url('https://image.shutterstock.com/image-photo/mountains-under-mist-morning-amazing-260nw-1725825019.jpg'); */
   /* background-color: #60b347; */
 }
@@ -71,7 +74,7 @@ h1 {
 
 .number {
   background: #eee;
-  color: #333;
+  color: #75a2aa96;
   font-size: 6rem;
   width: 15rem;
   padding: 3rem 0rem;
@@ -118,7 +121,7 @@ h1 {
 .btn {
   border: none;
   background-color: #eee;
-  color: #222;
+  color: #75a2aa96;
   font-size: 2rem;
   font-family: inherit;
   padding: 2rem 3rem;
